--- a/TestQuestion/Base.lproj/Main.storyboard
+++ b/TestQuestion/Base.lproj/Main.storyboard
@@ -78,26 +78,23 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7W9-4b-Y3K">
-                                <rect key="frame" x="0.0" y="694" width="135" height="26"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="0ET-PD-3Ak"/>
-                                    <constraint firstAttribute="width" constant="135" id="fij-vg-wJv"/>
-                                </constraints>
-                            </view>
+                            <progressView opaque="NO" contentMode="scaleAspectFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dZv-X2-W5x">
+                                <rect key="frame" x="0.0" y="808" width="415" height="4"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                            </progressView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
                         <constraints>
-                            <constraint firstItem="7W9-4b-Y3K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0rz-O9-wQ6"/>
+                            <constraint firstItem="dZv-X2-W5x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="85d-DE-tfw"/>
                             <constraint firstItem="AWC-5F-N2f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GwG-Vp-MtA"/>
                             <constraint firstItem="AWC-5F-N2f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="HOe-ZR-QAG"/>
                             <constraint firstItem="GrG-yl-dPd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Igb-5w-ElX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="woa-pp-BpF" secondAttribute="trailing" constant="20" id="LJo-Ub-dG6"/>
                             <constraint firstItem="Yoy-3f-eg8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Lq7-Uw-H5S"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dZv-X2-W5x" secondAttribute="bottom" constant="50" id="MFA-bH-zue"/>
                             <constraint firstItem="AWC-5F-N2f" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SEN-Gk-kMO"/>
-                            <constraint firstItem="7W9-4b-Y3K" firstAttribute="top" secondItem="GrG-yl-dPd" secondAttribute="bottom" constant="33" id="SKP-Yi-jZA"/>
+                            <constraint firstItem="dZv-X2-W5x" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bmj-QV-ZAS"/>
                             <constraint firstItem="Yoy-3f-eg8" firstAttribute="top" secondItem="AWC-5F-N2f" secondAttribute="bottom" constant="200" id="kab-3v-XWD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Oij-vF-roP" secondAttribute="trailing" constant="20" id="kmZ-KQ-BTw"/>
                             <constraint firstItem="woa-pp-BpF" firstAttribute="top" secondItem="Oij-vF-roP" secondAttribute="bottom" constant="50" id="mcQ-Px-uEh"/>
@@ -106,7 +103,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="progressBar" destination="7W9-4b-Y3K" id="AVD-bm-h9N"/>
+                        <outlet property="progressBar" destination="dZv-X2-W5x" id="h1F-3r-raT"/>
                         <outlet property="progressLabel" destination="GrG-yl-dPd" id="sau-ve-btN"/>
                         <outlet property="questionLabel" destination="AWC-5F-N2f" id="PJq-Du-y3d"/>
                         <outlet property="scoreLabel" destination="woa-pp-BpF" id="4qJ-TR-Ooh"/>
@@ -118,8 +115,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
